# Freenove_Big_Hexapod_Robot_Kit_for_Raspberry_Pi

./: .gitignore  README.md  cyclonedds.xml  docker-compose.yml  fastdds_config.xml
Application/windows/: IP.txt
Application/windows/PIL/: _imagingft.cp37-win32.pyd
Code/: robot_control_communication_protocol.md  setup.py  setup_macos.py  setup_macos.sh
Code/Client/: Calibration.py  Client.py  Command.py  Main.py  ui_client.py  ui_face.py  ui_led.py
Code/Server/: ADC.py  ADCDevice.py  ADS7830.py  Buzzer.py  Command.py  Control.py  Led.py  Server.py  Servo.py  Ultrasonic.py  camera.py  control.py  kalman.py  main.py  myCode.py  rpi_ledpixel.py  test.py
Code/Server-pi5/: Control.py  IMU.py  Led.py  Server.py  Ultrasonic.py  main.py  test.py
archive/: README.md
archive/Application/mac/: point.txt
archive/Application/windows/: IP.txt
archive/Code/: setup.py
archive/Code/Client/: Calibration.py  Main.py  ui_client.py  ui_face.py  ui_led.py
archive/Code/Server/: adc.py  buzzer.py  control.py  imu.py  (+9 more)
config/: client.xml  client_config.yaml  router_config.yaml  server.xml  zenoh_config.json5
docker/: Dockerfile.pi  Dockerfile.wsl  docker.pi  docker.wsl
docs/source/: conf.py  index.rst
raspberry_pi/: README.md
src/Hexapod_Robot_description/: package.xml  setup.py
src/hexapod_model_description/: package.xml  setup.cfg  setup.py
src/pi_control/: README.md  package.xml  setup.cfg  setup.py
src/pi_control/launch/: robot_launch.py
src/pi_control/pi_control/: imu.py  servo_node.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/windows_command/: README.md  package.xml  setup.cfg  setup.py
src/windows_command/launch/: window_launch.py
src/windows_command/windows_command/: hexapod_gui.py  main_window.py  main_window_term.py
src/windows_control/: package.xml  setup.py
(+44 files in other folders)
