<?xml version="1.0"?>
<package format="3">
  <name>windows_command</name>
  <version>0.0.1</version>
  <description>ROS2 node to command the Hexpod robot via windows</description>
  <maintainer email="ogordillo@miners.utep.edu">Orlando E. Gordillo</maintainer>
  <license>Apache License 2.0</license>

  <depend>ament_cmake_python</depend>
  <exec_depend>robot_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>